Fix header alignment in AlertBox (#228)
* Fix header alignment in AlertBox

* 0.25.34

* What if components used other components??? :philosoraptor:

* Use a FlexItem instead of a FlexBox

--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -10,8 +10,7 @@
 }
 
 .AlertBox--title {
-  display: inline;
-  .margin--left--2xs;
+  .margin--left--xs;
   .text--semi-bold;
 }
 
@@ -61,7 +60,6 @@
 }
 
 .AlertBox--close {
-  display: inline;
   cursor: pointer;
   height: @size_m;
   width: @size_m;
